sampdotnethook/a_players.h

void SetPlayerPos(int playerid, float x, float y, float z);
void SetPlayerPosFindZ(int playerid, float x, float y, float z);
void GetPlayerPos(int playerid, float& x, float& y, float& z);
void SetPlayerFacingAngle(int playerid, float ang);
void GetPlayerFacingAngle(int playerid, float& ang);
//void IsPlayerInRangeOfPoint(int playerid, float range, float x, float y, float z);
//float GetPlayerDistanceFromPoint(int playerid, float x, float y, float z);
int IsPlayerStreamedIn(int playerid, int forplayerid);
void SetPlayerInterior(int playerid, int interiorid);
int GetPlayerInterior(int playerid);
void SetPlayerHealth(int playerid, float health);
void GetPlayerHealth(int playerid, float& health);
void SetPlayerArmour(int playerid, float armour);
void GetPlayerArmour(int playerid, float& armour);
void SetPlayerAmmo(int playerid, int weaponslot, int ammo);
int GetPlayerAmmo(int playerid);
int GetPlayerWeaponState(int playerid);
int GetPlayerTargetPlayer(int playerid);
void SetPlayerTeam(int playerid, int teamid);
int GetPlayerTeam(int playerid);
void SetPlayerScore(int playerid, int score);
int GetPlayerScore(int playerid);
int GetPlayerDrunkLevel(int playerid);
void SetPlayerDrunkLevel(int playerid, int level);
void SetPlayerColor(int playerid, int color);
int GetPlayerColor(int playerid);
void SetPlayerSkin(int playerid, int skinid);
int GetPlayerSkin(int playerid);
void GivePlayerWeapon(int playerid, int weaponid, int ammo);
void ResetPlayerWeapons(int playerid);
void SetPlayerArmedWeapon(int playerid, int weaponid);
void GetPlayerWeaponData(int playerid, int slot, int& weapons, int& ammo);
void GivePlayerMoney(int playerid, int money);
void ResetPlayerMoney(int playerid);
void SetPlayerName(int playerid, char* name);
int GetPlayerMoney(int playerid);
int GetPlayerState(int playerid);
void GetPlayerIp(int playerid, char* name, int len);
int GetPlayerPing(int playerid);
int GetPlayerWeapon(int playerid);
void GetPlayerKeys(int playerid, int& keys, int& updown, int& leftright);
void GetPlayerName(int playerid, char* name, int len);
void SetPlayerTime(int playerid, int hour, int minute);
void GetPlayerTime(int playerid, int& hour, int& minute);
void TogglePlayerClock(int playerid, int toggle);
void SetPlayerWeather(int playerid, int weather);
void ForceClassSelection(int playerid);
void SetPlayerWantedLevel(int playerid, int level);
int GetPlayerWantedLevel(int playerid);
void SetPlayerFightingStyle(int playerid, int style);
int GetPlayerFightingStyle(int playerid);
void SetPlayerVelocity(int playerid, float x, float y, float z);
void GetPlayerVelocity(int playerid, float& x, float& y, float& z);
void PlayCrimeReportForPlayer(int playerid, int suspectid, int crime);
void PlayAudioStreamForPlayer(int playerid, char* url, float posx=0.0, float posy=0.0, float posz=0.0, float distance=50.0, int usepos=0);
void StopAudioStreamForPlayer(int playerid);
void SetPlayerShopName(int playerid, char* shopname);
void SetPlayerSkillLevel(int playerid, int skill, int level);
int GetPlayerSurfingVehicleID(int playerid);
int GetPlayerSurfingObjectID(int playerid);
void RemoveBuildingForPlayer(int playerid, int modelid, float fx, float fy, float fz, float fradius);
void SetPlayerAttachedObject(int playerid, int index, int modelid, int bone, float foffsetx=0.0, float foffsety=0.0, float foffsetz=0.0, float frotx=0.0, float froty=0.0, float frotz=0.0, float fscalex=1.0, float fscaley=1.0, float fscalez=1.0, int materialcolor1=0, int materialcolor2=0);
void RemovePlayerAttachedObject(int playerid, int index);
void IsPlayerAttachedObjectSlotUsed(int playerid, int index);
void EditAttachedObject(int playerid, int index);