sampdotnet/Core/Natives.cs

		
		// Player info
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerPos")]
		public static extern void SetPlayerPos(int playerid, float x, float y, float z);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerPosFindZ")]
		public static extern void SetPlayerPosFindZ(int playerid, float x, float y, float z);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerPos")]
		public static extern void GetPlayerPos(int playerid, ref float x, ref float y, ref float z);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerFacingAngle")]
		public static extern void SetPlayerFacingAngle(int playerid, float ang);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerFacingAngle")]
		public static extern void GetPlayerFacingAngle(int playerid, ref float ang);
		//[DllImport("__Internal", EntryPoint="_samp_IsPlayerInRangeOfPoint")]
		//public static extern void IsPlayerInRangeOfPoint(int playerid, float range, float x, float y, float z);
		//[DllImport("__Internal", EntryPoint="_samp_GetPlayerDistanceFromPoint")]
		//public static extern void GetPlayerDistanceFromPoint(int playerid, float x, float y, float z);
		[DllImport("__Internal", EntryPoint="_samp_IsPlayerStreamedIn")]
		public static extern int IsPlayerStreamedIn(int playerid, int forplayerid);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerInterior")]
		public static extern void SetPlayerInterior(int playerid, int interiorid);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerInterior")]
		public static extern int GetPlayerInterior(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerHealth")]
		public static extern void SetPlayerHealth(int playerid, float health);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerHealth")]
		public static extern void GetPlayerHealth(int playerid, ref float health);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerArmour")]
		public static extern void SetPlayerArmour(int playerid, float armour);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerArmour")]
		public static extern void GetPlayerArmour(int playerid, ref float armour);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerAmmo")]
		public static extern void SetPlayerAmmo(int playerid, int weaponslot, int ammo);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerAmmo")]
		public static extern int GetPlayerAmmo(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerWeaponState")]
		public static extern int GetPlayerWeaponState(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerTargetPlayer")]
		public static extern int GetPlayerTargetPlayer(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerTeam")]
		public static extern void SetPlayerTeam(int playerid, int teamid);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerTeam")]
		public static extern int GetPlayerTeam(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerScore")]
		public static extern void SetPlayerScore(int playerid, int score);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerScore")]
		public static extern int GetPlayerScore(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerDrunkLevel")]
		public static extern int GetPlayerDrunkLevel(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerDrunkLevel")]
		public static extern void SetPlayerDrunkLevel(int playerid, int level);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerColor")]
		public static extern void SetPlayerColor(int playerid, uint color);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerColor")]
		public static extern uint GetPlayerColor(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerSkin")]
		public static extern void SetPlayerSkin(int playerid, int skinid);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerSkin")]
		public static extern int GetPlayerSkin(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_GivePlayerWeapon")]
		public static extern void GivePlayerWeapon(int playerid, int weaponid, int ammo);
		[DllImport("__Internal", EntryPoint="_samp_ResetPlayerWeapons")]
		public static extern void ResetPlayerWeapons(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerArmedWeapon")]
		public static extern void SetPlayerArmedWeapon(int playerid, int weaponid);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerWeaponData")]
		public static extern void GetPlayerWeaponData(int playerid, int slot, ref int weapons, ref int ammo);
		[DllImport("__Internal", EntryPoint="_samp_GivePlayerMoney")]
		public static extern void GivePlayerMoney(int playerid, int money);
		[DllImport("__Internal", EntryPoint="_samp_ResetPlayerMoney")]
		public static extern void ResetPlayerMoney(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerName")]
		public static extern void SetPlayerName(int playerid, string name);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerMoney")]
		public static extern int GetPlayerMoney(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerState")]
		public static extern int GetPlayerState(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerIp")]
		public static extern void GetPlayerIp(int playerid, StringBuilder name, int len);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerPing")]
		public static extern int GetPlayerPing(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerWeapon")]
		public static extern int GetPlayerWeapon(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerKeys")]
		public static extern void GetPlayerKeys(int playerid, ref int keys, ref int updown, ref int leftright);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerName")]
		public static extern void GetPlayerName(int playerid, StringBuilder name, int len);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerTime")]
		public static extern void SetPlayerTime(int playerid, int hour, int minute);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerTime")]
		public static extern void GetPlayerTime(int playerid, ref int hour, ref int minute);
		[DllImport("__Internal", EntryPoint="_samp_TogglePlayerClock")]
		public static extern void TogglePlayerClock(int playerid, int toggle);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerWeather")]
		public static extern void SetPlayerWeather(int playerid, int weather);
		[DllImport("__Internal", EntryPoint="_samp_ForceClassSelection")]
		public static extern void ForceClassSelection(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerWantedLevel")]
		public static extern void SetPlayerWantedLevel(int playerid, int level);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerWantedLevel")]
		public static extern int GetPlayerWantedLevel(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerFightingStyle")]
		public static extern void SetPlayerFightingStyle(int playerid, int style);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerFightingStyle")]
		public static extern int GetPlayerFightingStyle(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerVelocity")]
		public static extern void SetPlayerVelocity(int playerid, float x, float y, float z);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerVelocity")]
		public static extern void GetPlayerVelocity(int playerid, ref float x, ref float y, ref float z);
		[DllImport("__Internal", EntryPoint="_samp_PlayCrimeReportForPlayer")]
		public static extern void PlayCrimeReportForPlayer(int playerid, int suspectid, int crime);
		[DllImport("__Internal", EntryPoint="_samp_PlayAudioStreamForPlayer")]
		public static extern void PlayAudioStreamForPlayer(int playerid, string url, float posx=0.0f, float posy=0.0f, float posz=0.0f, float distance=50.0f, int usepos=0);
		[DllImport("__Internal", EntryPoint="_samp_StopAudioStreamForPlayer")]
		public static extern void StopAudioStreamForPlayer(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerShopName")]
		public static extern void SetPlayerShopName(int playerid, string shopname);
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerSkillLevel")]
		public static extern void SetPlayerSkillLevel(int playerid, int skill, int level);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerSurfingVehicleID")]
		public static extern int GetPlayerSurfingVehicleID(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_GetPlayerSurfingObjectID")]
		public static extern int GetPlayerSurfingObjectID(int playerid);
		[DllImport("__Internal", EntryPoint="_samp_RemoveBuildingForPlayer")]
		public static extern void RemoveBuildingForPlayer(int playerid, int modelid, float fx, float fy, float fz, float fradius);
		
		// Attached to bone objects
		[DllImport("__Internal", EntryPoint="_samp_SetPlayerAttachedObject")]
		public static extern void SetPlayerAttachedObject(int playerid, int index, int modelid, int bone, float foffsetx=0.0f, float foffsety=0.0f, float foffsetz=0.0f, float frotx=0.0f, float froty=0.0f, float frotz=0.0f, float fscalex=1.0f, float fscaley=1.0f, float fscalez=1.0f, int materialcolor1=0, int materialcolor2=0);
		[DllImport("__Internal", EntryPoint="_samp_RemovePlayerAttachedObject")]
		public static extern void RemovePlayerAttachedObject(int playerid, int index);
		[DllImport("__Internal", EntryPoint="_samp_IsPlayerAttachedObjectSlotUsed")]
		public static extern void IsPlayerAttachedObjectSlotUsed(int playerid, int index);
		[DllImport("__Internal", EntryPoint="_samp_EditAttachedObject")]
		public static extern void EditAttachedObject(int playerid, int index);
